--- a/components/station.comp.html
+++ b/components/station.comp.html
@@ -282,7 +282,7 @@ console.debug('refresh!');
                 this.$visual.querySelector('.precipitation').textContent = 'n.d.';
             }
             else {
-                this.$visual.querySelector('.precipitation').textContent = data.precipitation.value + ' ' + data.precipitation.um;
+                this.$visual.querySelector('.precipitation').textContent = `${ data.precipitation.value } ${ data.precipitation.um }`;
             }
 
             // wind
@@ -292,7 +292,7 @@ console.debug('refresh!');
                 windSpeedEl.textContent = 'n.d.';
             }
             else {
-                windSpeedEl.textContent = data.wind.speed.value + ' ' + data.wind.speed.um;
+                windSpeedEl.textContent = `${ data.wind.speed.value } ${ data.wind.speed.um }`;
             }
 
             const windDirectionEl = this.$visual.querySelector('.wind-direction');
@@ -316,21 +316,21 @@ console.debug('refresh!');
 
                 const selector = '#day' + (i + 1);
 
-                this.$visual.querySelector(selector + ' > h2').textContent = fDate.toLocaleDateString('it-IT', { weekday: 'long' });
-                this.$visual.querySelector(selector + ' > small > span').textContent = forecastData.reliability.value + forecastData.reliability.um;
+                this.$visual.querySelector(`${ selector } > h2`).textContent = fDate.toLocaleDateString('it-IT', { weekday: 'long' });
+                this.$visual.querySelector(`${ selector } > small > span`).textContent = forecastData.reliability.value + forecastData.reliability.um;
 
                 // symbol
-                this.$visual.querySelector(selector + ' .symbol').style.background = computeBackgroundRules(forecastData);
+                this.$visual.querySelector(`${ selector } .symbol`).style.background = computeBackgroundRules(forecastData);
 
                 // wind
-                var windDirectionEl = this.$visual.querySelector(selector + ' .wind-direction');
+                var windDirectionEl = this.$visual.querySelector(`${ selector } .wind-direction`);
 
                 if (forecastData.wind.direction.value === null) {
                     windDirectionEl.textContent = ' ';
                 }
                 else {
                     windDirectionEl.innerHTML = '&#8595;';
-                    windDirectionEl.style.transform = 'rotate(' + forecastData.wind.direction.value + 'deg)';
+                    windDirectionEl.style.transform = `rotate(${ forecastData.wind.direction.value }deg)`;
                 }
             }
         }
@@ -344,7 +344,7 @@ console.debug('fetch station data!');
             const stationId = el.$stationId;
 
             const xhr = new XMLHttpRequest();
-            xhr.open('GET', '/meteo.fvg/json/' + stationId + '.json', true);
+            xhr.open('GET', `/meteo.fvg/json/${ stationId }.json`, true);
             xhr.responseType = 'json';
 
             xhr.onload = () => {
@@ -372,7 +372,7 @@ console.debug('fetch zone data!');
             const folder = d.getFullYear() + (d.getMonth() + 1 < 10 ? '0' : '') + (d.getMonth() + 1) + (d.getDate() < 10 ? '0' : '') + d.getDate();
 
             const xhr = new XMLHttpRequest();
-            xhr.open('GET', '/meteo.fvg/json/' + folder + '/zone-' + zoneId + '.json', true);
+            xhr.open('GET', `/meteo.fvg/json/${ folder }/zone-${ zoneId }.json`, true);
             xhr.responseType = 'json';
 
             xhr.onload = () => {
@@ -445,7 +445,7 @@ console.debug('precipitation: type:', precipitationType, 'mm', precipitationValu
         if (cloudiness) {
             const leftPx = '-60'; // day, 0 for night TODO calculate sunrise/sunset time based on station location :)
 
-            backgroundRules.push('url(img/symbols-sprite.png) ' + leftPx + 'px -' + (cloudiness - 1) * 60 + 'px no-repeat');
+            backgroundRules.push(`url(img/symbols-sprite.png) ${ leftPx }px -${ (cloudiness - 1) * 60 }px no-repeat`);
         }
 
         if (precipitationType && precipitationLevel) {
@@ -454,16 +454,16 @@ console.debug('precipitation: type:', precipitationType, 'mm', precipitationValu
             switch (precipitationType) {
                 // rain
                 case 1:
-                    backgroundRules.push('url(img/symbols-sprite.png) -120px -' + topPx + 'px no-repeat');
+                    backgroundRules.push(`url(img/symbols-sprite.png) -120px -${ topPx }px no-repeat`);
                     break;
                 // rain + snow
                 case 2:
-                    backgroundRules.push('url(img/symbols-sprite.png) -120px -' + topPx + 'px no-repeat');
-                    backgroundRules.push('url(img/symbols-sprite.png) -180px -' + topPx + 'px no-repeat');
+                    backgroundRules.push(`url(img/symbols-sprite.png) -120px -${ topPx }px no-repeat`);
+                    backgroundRules.push(`url(img/symbols-sprite.png) -180px -${ topPx }px no-repeat`);
                     break;
                 // snow
                 case 3:
-                    backgroundRules.push('url(img/symbols-sprite.png) -180px -' + topPx + 'px no-repeat');
+                    backgroundRules.push(`url(img/symbols-sprite.png) -180px -${ topPx }px no-repeat`);
                     break;
             }
         }
